fix: fix content overflow on mobile layout

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11,13 +11,15 @@ body {
   display: flex;
   background-color: white;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  place-items: center;
-  margin: 0 auto;
+  align-items: safe center;
+  justify-items: safe center;
   background-color: rgba(249, 250, 251);
 }
 
 main {
   width: 60%;
+  height: 100%;
+  overflow: auto;
 }
 
 input {
